# shitty-justn

./: .gitignore  Cargo.toml  Dockerfile  IDEA.md  PLAN.md  README.ko.md  README.md  WHY.md  android-app.md  cli.md  content.css  content.js  demo.tape  deno.json  dep-age.rb  docker-compose.yml  drizzle.config.ts  ganbatte.rb  library-sdk.md  macos-app.md  main.ts  manifest.json  mcp-server.md  package.json  pnpm-lock.yaml  popup.css  popup.html  port-who.rb  ralph-loop.local.md  requirements-dev.txt  requirements.txt  tui-app.md  uninstall.sh  vitest.config.ts  vitest.setup.ts  web-service.md  whatdid.rb
.claude-plugin/: marketplace.json
app/: page.tsx
blaming/: .env.example  AGENTS.md  PROGRESS.md  README.md  package-lock.json
cli-speedrun/: .gitignore  Cargo.toml  IDEA.md  demo.tape
cli-speedrun/.github/workflows/: ci.yml
cli-speedrun/data/: git-advanced.json  git.json
cli-speedrun/src/: app.rs  config.rs  event.rs  lib.rs  main.rs
cli-speedrun/src/data/: mod.rs  records.rs
cli-speedrun/src/game/: learning.rs  mod.rs
cli-speedrun/src/ui/: menu.rs  mod.rs
commit-vibe/: .dockerignore  CONTRIBUTING.md  fly.toml  mix.exs
critline/: IDEA.md
data/: docker.json  kubectl.json  linux.json  npm.json
daybar/: AppDelegate.swift  DDay.swift  DDayStore.swift  EditDDayView.swift  IDEA.md  L10n.swift  README.ko.md  README.md  StatusBarController.swift
daybar.xcodeproj/: project.pbxproj
dep-age/: Cargo.toml  IDEA.md  LICENSE  README.md
dep-age/.github/workflows/: ci.yml  release.yml
dep-age/sample-node/: package.json
dep-age/src/: replacements.rs
dep-age/src/formatter/: markdown.rs  terminal.rs
dep-age/src/registry/: mod.rs  npm.rs
discord-bot/: .env.example  IDEA.md
drizzle/: 0000_complex_vulcan.sql
for-real/: popup.js
git-roast/: README.ko.md  README.md  demo.tape
harness-for-yall/: install.sh
homebrew-tap/: cli-speedrun.rb  (+4 more)
(+273 files in other folders)
