[package]
name = "cli-speedrun"
version = "0.1.1"
edition = "2024"
description = "Terminal command typing speed game - like monkeytype for CLI"
license = "MIT"
repository = "https://github.com/justn-hyeok/cli-speedrun"
keywords = ["cli", "typing", "game", "tui", "speedrun"]
categories = ["command-line-utilities", "games"]

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
rand = "0.9"
dirs = "6"

[dev-dependencies]
tempfile = "3"
