[package]
name = "dep-age"
version = "0.1.0"
edition = "2021"
description = "Visualize how old your project dependencies are"
license = "MIT"
repository = "https://github.com/bssm-oss/shitty-justn"
homepage = "https://github.com/bssm-oss/shitty-justn/tree/main/dep-age"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
colored = "2"
chrono = { version = "0.4", features = ["serde"] }
semver = "1"
anyhow = "1"
regex = "1"
futures = "0.3"

[dev-dependencies]
tempfile = "3.27.0"
